--- a/CobaltV3/CobaltV3.vcxproj.filters
+++ b/CobaltV3/CobaltV3.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Third Party\Kiero\kiero.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Third Party\defs.h">
@@ -44,5 +47,17 @@
     <ClInclude Include="Utils\errors.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Third Party\Kiero\kiero.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Third Party\MinHook\MinHook.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\hook.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="Third Party\MinHook\minhook.lib" />
   </ItemGroup>
 </Project>
